--- a/index.html
+++ b/index.html
@@ -32,6 +32,66 @@
         Esericizio-1
       </div>
     </div>
+
+    <div class="container">
+      <h2 class="text-center">Esericizio-2</h2>
+      <div class="row">
+        <div class="col-md-4 bg-warning text-dark p-3 border">Colonna 1</div>
+        <div class="col-md-4 bg-warning text-dark p-3 border">Colonna 2</div>
+        <div class="col-md-4 bg-warning text-dark p-3 border">Colonna 3</div>
+      </div>
+    </div>
+
+    <div class="container py-4">
+      <h2 class="text-center">Esericizio-3</h2>
+
+      <!-- Griglia XS  -->
+      <div class="row">
+        <div class="col bg-success text-white p-3 border">Colonna 1</div>
+        <div class="col bg-success text-white p-3 border">Colonna 2</div>
+        <div class="col bg-success text-white p-3 border">Colonna 3</div>
+      </div>
+      <hr />
+
+      <!-- Griglia SM -->
+      <div class="row">
+        <div class="col-sm bg-success text-white p-3 border">Colonna 1</div>
+        <div class="col-sm bg-success text-white p-3 border">Colonna 2</div>
+        <div class="col-sm bg-success text-white p-3 border">Colonna 3</div>
+      </div>
+      <hr />
+
+      <!-- Griglia MD -->
+      <div class="row">
+        <div class="col-md bg-success text-white p-3 border">Colonna 1</div>
+        <div class="col-md bg-success text-white p-3 border">Colonna 2</div>
+        <div class="col-md bg-success text-white p-3 border">Colonna 3</div>
+      </div>
+      <hr />
+
+      <!-- Griglia LG -->
+      <div class="row">
+        <div class="col-lg bg-success text-white p-3 border">Colonna 1</div>
+        <div class="col-lg bg-success text-white p-3 border">Colonna 2</div>
+        <div class="col-lg bg-success text-white p-3 border">Colonna 3</div>
+      </div>
+      <hr />
+
+      <!-- Griglia XL -->
+      <div class="row">
+        <div class="col-xl bg-success text-white p-3 border">Colonna 1</div>
+        <div class="col-xl bg-success text-white p-3 border">Colonna 2</div>
+        <div class="col-xl bg-success text-white p-3 border">Colonna 3</div>
+      </div>
+      <hr />
+
+      <!-- Griglia XXL -->
+      <div class="row">
+        <div class="col-xxl bg-success text-white p-3 border">Colonna 1</div>
+        <div class="col-xxl bg-success text-white p-3 border">Colonna 2</div>
+        <div class="col-xxl bg-success text-white p-3 border">Colonna 3</div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
