--- a/index.html
+++ b/index.html
@@ -92,6 +92,49 @@
         <div class="col-xxl bg-success text-white p-3 border">Colonna 3</div>
       </div>
     </div>
+
+    <div class="container py-4">
+      <h2 class="text-center">Esericizio-4</h2>
+
+      <div class="row">
+        <div class="col-lg-3 bg-danger text-white p-3 border border-dark">
+          Colonna Sinistra
+        </div>
+
+        <div class="col-lg-6 bg-danger text-white p-3 border border-dark">
+          Colonna Centrale (Più Larga)
+        </div>
+
+        <div class="col-lg-3 bg-danger text-white p-3 border border-dark">
+          Colonna Destra
+        </div>
+      </div>
+    </div>
+
+    <div class="container py-4">
+      <h2 class="text-center">Esericizio-5</h2>
+
+      <div class="row">
+        <div class="col-lg-4 bg-primary text-white p-3 border border-dark">
+          Colonna Piccola
+        </div>
+
+        <div class="col-lg-8 bg-primary text-white p-3 border border-dark">
+          <div class="row">
+            <div
+              class="col-md-6 bg-secondary text-white p-3 border border-dark"
+            >
+              Colonna Annidata 1
+            </div>
+            <div
+              class="col-md-6 bg-secondary text-white p-3 border border-dark"
+            >
+              Colonna Annidata 2
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
