--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
         </div>
       </div>
     </div>
+
+    <div class="container py-4">
+      <h2 class="text-center">Esericizio-6</h2>
+
+      <div class="row">
+        <!-- Prima colonna -->
+        <div class="col-lg-4 bg-dark text-white p-3">Colonna 1</div>
+
+        <!-- Seconda colonna spostata di 2 posizioni -->
+        <div class="col-lg-4 offset-lg-2 bg-dark text-white p-3">
+          Colonna 2 (spostata di 2)
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
